--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,100 +1,68 @@
-* {
-    background-color: black;
-    font-family: sans-serif;
-    color: azure;
-    
+body {
+    background: #FFB03A;
 }
 
-#whole {
-    width: 700px;
+#container {
+    background-image:url(../images/background.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    font-family: 'Londrina Solid', cursive;
+}
+
+.main-container {
+    width: 80%;
+    text-align: center;
     margin: auto;
 }
 
-#main-container {
-
-    width: 344px;
-    height:700px;
-    float: left;
-    border-color: white;
-    border-style: dotted;
-    
+.ptSans {
+    font-family: 'PT Sans', sans-serif;
 }
 
-
-.guns-and-roses {
-    width: 250px;
-    height: 230px;
-    padding-left: 40px;
-    padding-top: 20px;
+h1 {
+    width: 100%; 
+    margin: auto;
+    padding-top: 25%;
+    padding-bottom: 10px;
+    font-size: 48px;
 }
 
-/*aside container*/ 
-
-#play-container {
-    width: 344px;
-    height:700px;
-    float: right;
-    border-color: white;
-    border-style: dotted;
-    
-    
+.bottom {
+    padding-bottom: 10%;
 }
 
-.aside-container {
-    width: 200px;
-    height: 450px;
-    padding-top: 20px;
-   
+#guess {
+    margin: auto;
+    font-size: 36px;
+    margin-bottom: 45px;
 }
 
-.heading-container {
+.body-container {
     text-align: center;
-    width: 344px;
-    padding-top: 20px;
+    width: 80%;
 }
 
-.wins {
-    width: 344px;
-    text-align: center;
-    padding-top: 20px;
+.size {
+    font-size: 28px;
+    text-align: left;
+    padding-left: 43%;
+    margin-bottom: 30px;
 }
 
-.current-word {
-    width: 344px;
-    text-align: center;
-    padding-top: 20px;
+.sizeNumber {
+    font-size: 28px;
+    text-align: left;
+    margin-bottom: 30px;
+    padding-right: 30px;
 }
 
-.fill {
-    width: 344px;
-    text-align: center;
-    padding-top: 20px;
-    word-spacing: 25px;
+#img {
+    margin: 0 auto;
 }
 
-
-/*footer*/
-
-.bottom-container {
-    text-align: center;
+#winImage {
+    width:300px;
 }
-
-.guesses-remaining {
-    width: 344px;
-    text-align: center;
-    padding-top: 30px;
-}
-
-.box {
-    width: 344px;
-    text-align: center;
-    padding-top: 20px;
-    display: block;
-}
-
-.letters-guessed {
-    width: 344px;
-    text-align: center;
-    padding-top: 20px;
-}
-
